# openbook-offchain-services

./: Cargo.toml  README.md  markets.json
src/: lib.rs
src/backfill-candles/: main.rs
src/backfill-trades/: main.rs
src/database/: backfill.rs  fetch.rs  initialize.rs  insert.rs  mod.rs
src/scraper/: main.rs  parsing.rs  scrape.rs
src/server/: candles.rs  coingecko.rs  main.rs  markets.rs  traders.rs
src/structs/: coingecko.rs  mod.rs  openbook.rs  openbook_v2.rs  trader.rs
src/utils/: mod.rs
src/worker/: main.rs  mod.rs
src/worker/candle_batching/: higher_order_candles.rs  minute_candles.rs  mod.rs
src/worker/metrics/: mod.rs
